--- a/invertory.INI
+++ b/invertory.INI
@@ -7,3 +7,11 @@ ansible_password=Renegade187!
 ansible_connection=winrm
 ansible_winrm_transport=ntlm
 ansible_winrm_server_cert_validation=ignore
+
+[lin]
+20.245.112.106
+
+[lin:vars]
+ansible_user=clark
+ansible_password=Renegade187!
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
