looping over files for key and secrets

--- a/tasks/Linux/azure_utils_kv_secret.yml
+++ b/tasks/Linux/azure_utils_kv_secret.yml
@@ -5,7 +5,7 @@
   block:
     - name: Retrive secret
       ansible.builtin.uri:
-        url: "{{ azure_key_vault.key_vault_url }}/secrets/{{ azure_key_vault.secrets_name }}?api-version=2016-10-01"
+        url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ azure_key_vault.secrets_name }}?api-version=2016-10-01"
         method: GET
         return_content: true
         headers:
