--- a/tasks/Linux/main.yml
+++ b/tasks/Linux/main.yml
@@ -1,5 +1,6 @@
 ---
 
+
 # Always call
 - name: azure utils access token
   ansible.builtin.include_tasks:
@@ -8,18 +9,18 @@
 
 # Call when needed
 - name: azure utils kv secret
-  when: azure_key_vault is defined
+  when: azure_utils_kv_secret is defined
   ansible.builtin.include_tasks:
     file: azure_utils_kv_secret.yml
   loop: "{{ azure_utils_kv_secret }}"
-  
-- name: key
-  when: azure_key_vault is defined
+
+- name:  azure utils kv key
+  when: azure_utils_kv_key is defined
   ansible.builtin.include_tasks:
     file: azure_utils_kv_key.yml
   loop: "{{ azure_utils_kv_key }}"
 
-- name: key
+- name:  azure utils kv certificate
   when: azure_utils_kv_certificate is defined
   ansible.builtin.include_tasks:
     file: azure_utils_kv_certificate.yml
