--- a/tasks/Linux/azure_utils_kv_secret.yml
+++ b/tasks/Linux/azure_utils_kv_secret.yml
@@ -1,17 +1,37 @@
 ---
+  
+  - name: Retrive secret
+    ansible.builtin.uri:
+      url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ item.secret }}?api-version=2016-10-01"
+      method: GET
+      return_content: true
+      headers:
+        Authorization: "Bearer {{ token_directive.json.access_token }}"
+    register: secret
 
-- name: secret
-  when: azure_key_vault.secrets_name is defined
-  block:
-    - name: Retrive secret
-      ansible.builtin.uri:
-        url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ azure_key_vault.secrets_name }}?api-version=2016-10-01"
-        method: GET
-        return_content: true
-        headers:
-          Authorization: "Bearer {{ token_directive.json.access_token }}"
-      register: secret
+  - name: output secret
+    debug:
+      msg: "{{ secret.json.value }}"
 
-    - name: output secret
-      debug:
-        msg: "{{ secret.json.value }}"
+
+  - name: Settting perment env for "{{ item.output_env }}"
+    when: item.output_env is defined
+    become: true
+    block:
+      - name: Adding the path in the Profile files
+        lineinfile: 
+          dest: /etc/environment
+          line: 'export {{ item.output_env }}={{ secret.json.value }}' 
+          insertafter: EOF
+          state: present
+
+      - name: Source the bash_profile file
+        shell: source /etc/environment
+
+  - name: Set the contents of a file "{{ item.output_path }}" to secret
+    when: item.output_path is defined
+    ansible.builtin.copy:
+      content: "{{ secret.json.value }}"
+      dest: "{{ item.output_path }}"
+
+
