--- a/tasks/Windows/azure_utils_kv_secret.yml
+++ b/tasks/Windows/azure_utils_kv_secret.yml
@@ -3,7 +3,7 @@
 
   - name: Retrive secret
     ansible.windows.win_uri:
-      url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ azure_key_vault.secrets_name }}?api-version=2016-10-01"
+      url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ item.secret }}?api-version=2016-10-01"
       method: GET
       return_content: true
       headers:
@@ -13,3 +13,19 @@
   - name: output secret
     debug:
       msg: "{{ secret.json.value }}"
+
+
+# outputs 
+  - name: Set an environment variable for secret
+    when: item.output_env is defined
+    ansible.windows.win_environment:
+      state: present
+      name: "{{ item.output_env }}"
+      value: "{{ secret.json.value }}"
+      level: machine
+
+  - name: Set the contents of a file "{{ item.output_path }}" to secret
+    when: item.output_path is defined
+    ansible.windows.win_copy:
+      content: "{{ secret.json.value }}"
+      dest: "{{ item.output_path }}"
