--- a/invertory.INI
+++ b/invertory.INI
@@ -15,3 +15,4 @@ ansible_winrm_server_cert_validation=ignore
 ansible_user=clark
 ansible_password=Renegade187!
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_sudo_pass=Renegade187!
