uncommented and tidying vars

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,13 +2,6 @@
 # vars file for azurecapability
 
 
-# azure_key_vault:
-#   key_vault_url: https://clarktest.vault.azure.net
-#   secrets_name: testing
-#   certificate_name: TestCertificate
-#   key_name: ClarkKey
- 
-
 azure_utils_kv_secret:
   - vault: clarktest
     secret: testing
@@ -16,13 +9,13 @@ azure_utils_kv_secret:
     output_path: /azkv_secret1.txt
 
 
-# azure_utils_kv_certificate:
-#   - vault: clarktest
-#     certificate_name: TestCertificate
-#     cert_output_path: /out.temp
-#   - vault: clarktest
-#     certificate_name: workplz
-#     cert_output_path: /path.temp
+azure_utils_kv_certificate:
+  - vault: clarktest
+    certificate_name: TestCertificate
+    cert_output_path: /out.temp
+  - vault: clarktest
+    certificate_name: workplz
+    cert_output_path: /path.temp
 
  
 azure_utils_kv_key:
@@ -31,4 +24,3 @@ azure_utils_kv_key:
     output_env: envkey3
     output_path: /path.key
 
-#  azure_utils_access_token
