--- a/tasks/Windows/azure_utils_kv_secret.yml
+++ b/tasks/Windows/azure_utils_kv_secret.yml
@@ -3,7 +3,7 @@
 
   - name: Retrive secret
     ansible.windows.win_uri:
-      url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ item.secret }}?api-version=2016-10-01"
+      url: "https://{{ item.vault }}.{{ item.base_url | default('vault.azure.net') }}/secrets/{{ item.secret }}?api-version={{ item.api_version | default('2016-10-01') }}"
       method: GET
       return_content: true
       headers:
