--- a/tasks/Linux/azure_utils_kv_secret.yml
+++ b/tasks/Linux/azure_utils_kv_secret.yml
@@ -2,7 +2,7 @@
   
   - name: Retrive secret
     ansible.builtin.uri:
-      url: "https://{{ item.vault }}.vault.azure.net/secrets/{{ item.secret }}?api-version=2016-10-01"
+      url: "https://{{ item.vault }}.{{ item.base_url | default('vault.azure.net') }}/secrets/{{ item.secret }}?api-version={{ item.api_version | default('2016-10-01') }}"
       method: GET
       return_content: true
       headers:
